<resources>
    <string name="app_name">Smart student</string>


    <string name="s1">Статистика</string>
    <string name="title_activityplan">План</string>
    <string name="action_settings">Настройка оповещений</string>
    <string name="action_account">Личный кабинет</string>
    <string name="title_activity_add_plan">Добавление нового плана</string>
    <string name="title_activityv_plan">Выбор плана</string>
    <string name="Название">Название</string>
    <string name="Name">Столица</string>
    <string name="Na">Выбор подготовки</string>
    <string name="title_activity_scrolling_plan"></string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Smart Student</string>
    <string name="title_dashboard">Список предметов</string>
    <string name="title_notifications">Прочее</string>
    <string name="title_contact">Связаться с нами</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">О приложении</string>
    <string name="null_plan">Подготовка отсутствует</string>
    <string name="add_btn_q">Добавить</string>
</resources>