<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_app"
    app:startDestination="@id/calendarFragment">

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.studentapp.fragments.CalendarFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_calendar"
        >
        <action
            android:id="@+id/action_calendarFragment_to_answerQuestionFragment"
            app:destination="@id/answerQuestionFragment"
           />

    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.studentapp.fragments.ListFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_list"
        app:popUpTo="@+id/listFragment"
        app:popUpToInclusive="true">
        <action
            android:id="@+id/action_listFragment_to_addPlanFragment"
            app:destination="@id/addPlanFragment"
           />
        <action
            android:id="@+id/action_listFragment_to_statisticFragment"
            app:destination="@id/statisticFragment" />
    </fragment>
    <fragment
        android:id="@+id/anotherFragment"
        android:name="com.example.studentapp.fragments.AnotherFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_another"
        app:popUpTo="@+id/anotherFragment"
        >
        <action
            android:id="@+id/action_anotherFragment_to_aboutFragment"
            app:destination="@id/aboutFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
           />
        <action
            android:id="@+id/action_anotherFragment_to_contactFragment"
            app:destination="@id/contactFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
           />
        <action
            android:id="@+id/action_anotherFragment_to_accountFragment"
            app:destination="@id/accountFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
         />
        <action
            android:id="@+id/action_anotherFragment_to_friendsFragment"
            app:destination="@id/friendsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
         />
    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.studentapp.fragments.AboutAppFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about_app"/>

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.example.studentapp.fragments.AccountFragment"
        android:label="@string/action_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.example.studentapp.fragments.FriendsFragment"
        android:label="Друзья"
        tools:layout="@layout/fragment_friends" >
        <action
            android:id="@+id/action_friendsFragment_to_friendsProfileFragment"
            app:destination="@id/friendsProfileFragment"
           />
    </fragment>
    <fragment
        android:id="@+id/friendsProfileFragment"
        android:name="com.example.studentapp.fragments.FriendsProfileFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_profile_friends" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_friendsProfileFragment_to_friendsFragment"
            app:destination="@id/friendsFragment"
           />
        <action
            android:id="@+id/action_friendsProfileFragment_to_addSubjectsFriendFragment"
            app:destination="@id/addSubjectFriendFragment"
            />
        <action
            android:id="@+id/action_friendsProfileFragment_to_LoadingGameFragment"
            app:destination="@id/LoadingGameFragment" />
        <action
            android:id="@+id/action_friendsProfileFragment_to_ListGameHistoryFragment"
            app:destination="@id/ListGameHistoryFragment" />
    </fragment>
    <fragment
        android:id="@+id/addSubjectFriendFragment"
        android:name="com.example.studentapp.fragments.AddSubjectFriendFragment"
        android:label="Поделиться планом"
        tools:layout="@layout/fragment_add_subject_friend" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_addSubjectFriendFragment_to_friendsProfileFragment"
            app:destination="@id/friendsProfileFragment"
            app:popUpTo="@+id/friendsProfileFragment"
            app:popUpToInclusive="true"
            />

    </fragment>


    <fragment
        android:id="@+id/contactFragment"
        android:name="com.example.studentapp.fragments.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/answerQuestionFragment"
        android:name="com.example.studentapp.fragments.AnswerQuestionFragment"
        android:label="Подготовка"
        tools:layout="@layout/fragment_answer_question">
        <action
        android:id="@+id/action_answerQuestionFragment_to_calendarFragment"
        app:destination="@id/calendarFragment"
           />
        <argument
            android:name="id"
            app:argType="string" />
    </fragment>

    <fragment
    android:id="@+id/statisticFragment"
    android:name="com.example.studentapp.fragments.StatisticFragment"
    android:label="Статистика"
    tools:layout="@layout/fragment_statistic">
    <action
        android:id="@+id/action_statisticFragment_to_editPlanFragment"
        app:destination="@id/editPlanFragment"
       />
    <argument
        android:name="id"
        app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/addPlanFragment"
        android:name="com.example.studentapp.fragments.AddPlanFragment"
        android:label="Добавление"
        tools:layout="@layout/fragment_add_plan">
        <action
            android:id="@+id/action_addPlanFragment_to_settingPlanFragment2"
            app:destination="@id/settingPlanFragment"
            app:popUpTo="@+id/addPlanFragment"
            app:popUpToInclusive="true"
         />
    </fragment>
    <fragment
        android:id="@+id/settingPlanFragment"
        android:name="com.example.studentapp.fragments.SettingPlanFragment"
        android:label="fragment_setting_plan"
        tools:layout="@layout/fragment_setting_plan" >
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_settingPlanFragment_to_listFragment2"
            app:destination="@id/listFragment"
            app:popUpTo="@+id/calendarFragment"
            app:popUpToInclusive="false"
           />
    </fragment>

    <fragment
        android:id="@+id/editPlanFragment"
        android:name="com.example.studentapp.fragments.EditPlanFragment"
        android:label="Изменение"
        tools:layout="@layout/fragment_edit_plan">
        <action
            android:id="@+id/action_editPlanFragment_to_listFragment"
            app:destination="@id/listFragment"
            app:popUpTo="@+id/listFragment"
            app:popUpToInclusive="true"/>
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_editPlanFragment_to_editItemPlanFragment2"
            app:destination="@id/editItemPlanFragment"
         />
    </fragment>
    <fragment
        android:id="@+id/editItemPlanFragment"
        android:name="com.example.studentapp.fragments.EditItemPlanFragment"
        android:label="Изменение подготовки"
        tools:layout="@layout/fragment_edit_item_plan">
        <argument
            android:name="id"
            app:argType="string" />
        <action
            android:id="@+id/action_editItemPlanFragment_to_editPlanFragment"
            app:destination="@id/editPlanFragment"
            app:popUpTo="@+id/editPlanFragment"
            app:popUpToInclusive="true"/>
    </fragment>


    <fragment
        android:id="@+id/ListSubjectGameFragment"
        android:name="com.example.studentapp.fragments.game.ListSubjectGameFragment"
        android:label="игра"
        tools:layout="@layout/fragment_list_subject_game" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_ListSubjectGameFragment_to_SettingGameFragment"
            app:destination="@id/SettingGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/SettingGameFragment"
        android:name="com.example.studentapp.fragments.game.SettingGameFragment"
        android:label="игра"
        tools:layout="@layout/fragment_setting_game">
        <argument
            android:name="id"
            app:argType="string" />
        <argument
            android:name="friend"
            app:argType="integer" />

        <action
            android:id="@+id/action_SettingGameFragment_to_LoadingGameFragment2"
            app:destination="@id/LoadingGameFragment" />
    </fragment>

    <fragment
        android:id="@+id/QuestionGameFragment"
        android:name="com.example.studentapp.fragments.game.QuestionGameFragment"
        android:label="игра"
        tools:layout="@layout/fragment_question_game" >
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="status"
            app:argType="string" />
        <action
            android:id="@+id/action_QuestionGameFragment_to_LoadingGameFragment"
            app:destination="@id/LoadingGameFragment" />

    </fragment>

    <fragment
        android:id="@+id/CompareGameFragment"
        android:name="com.example.studentapp.fragments.game.CompareGameFragment"
        android:label="игра"
        tools:layout="@layout/fragment_compare_game" >
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="status"
            app:argType="string" />
        <action
            android:id="@+id/action_CompareGameFragment_to_LoadingGameFragment"
            app:destination="@id/LoadingGameFragment" />

    </fragment>


    <fragment
        android:id="@+id/ResultGameFragment"
        android:name="com.example.studentapp.fragments.game.ResultGameFragment"
        android:label="игра"
        tools:layout="@layout/fragment_result_game" >
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="status"
            app:argType="string" />
        <action
            android:id="@+id/action_ResultGameFragment_to_friendsProfileFragment"
            app:destination="@id/friendsProfileFragment" />

    </fragment>
    <fragment
        android:id="@+id/LoadingGameFragment"
        android:name="com.example.studentapp.fragments.game.LoadingGameFragment"
        android:label="игра"
        tools:layout="@layout/fragment_loading_game" >
        <argument
            android:name="idGame"
            app:argType="integer" />
        <argument
            android:name="status"
            app:argType="string" />
        <action
            android:id="@+id/action_LoadingGameFragment_to_QuestionGameFragment"
            app:destination="@id/QuestionGameFragment"
            app:popUpTo="@+id/friendsProfileFragment"
            app:popUpToInclusive="false"/>
        <action
            android:id="@+id/action_LoadingGameFragment_to_ResultGameFragment"
            app:destination="@id/ResultGameFragment"
            app:popUpTo="@+id/friendsProfileFragment"
            app:popUpToInclusive="false"/>
        <action
            android:id="@+id/action_LoadingGameFragment_to_CompareGameFragment"
            app:destination="@id/CompareGameFragment"
            app:popUpTo="@+id/friendsProfileFragment"
            app:popUpToInclusive="false"/>

    </fragment>

    <fragment
        android:id="@+id/ListGameHistoryFragment"
        android:name="com.example.studentapp.fragments.game.ListGameHistoryFragment"
        android:label="игра"
        tools:layout="@layout/fragment_list_game_history" >
        <argument
            android:name="id"
            app:argType="integer" />
        <action
            android:id="@+id/action_ListGameHistoryFragment_to_ListSubjectGameFragment"
            app:destination="@id/ListSubjectGameFragment" />
        <action
            android:id="@+id/action_ListGameHistoryFragment_to_LoadingGameFragment"
            app:destination="@id/LoadingGameFragment" />

    </fragment>

</navigation>